package composite

type component interface {
	search(string)
}
